--- a/cozyandroid2/src/main/res/layout/view_recycler.xml
+++ b/cozyandroid2/src/main/res/layout/view_recycler.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent" android:layout_height="match_parent">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/srRefresh"
             android:layout_width="match_parent"
@@ -22,14 +22,11 @@
             android:layout_gravity="center"
             android:layout_height="50dp"/>
 
-    <TextView
-            android:id="@+id/tvPlaceHolder"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:visibility="gone"
-            android:textStyle="bold"
-            tools:text="Empty list"
-            android:layout_height="wrap_content"/>
+    <FrameLayout
+            android:id="@+id/flPlaceHolder"
+            android:layout_width="match_parent"
+                 android:layout_height="match_parent"/>
+
+
 
 </FrameLayout>
