--- a/cozyandroid2/src/main/res/layout/view_recycler.xml
+++ b/cozyandroid2/src/main/res/layout/view_recycler.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/srRefresh"
             android:layout_width="match_parent"
@@ -11,22 +12,22 @@
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/baseRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ProgressBar
             android:id="@+id/progress"
             android:layout_width="50dp"
-            android:visibility="gone"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_height="50dp"/>
+            android:visibility="gone" />
 
     <FrameLayout
             android:id="@+id/flPlaceHolder"
             android:layout_width="match_parent"
-                 android:layout_height="match_parent"/>
-
+            android:layout_height="match_parent"
+            android:visibility="gone" />
 
 
 </FrameLayout>
