added swipe button

--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -9,6 +9,6 @@
             android:id="@+id/tvText"
             android:text="JBjbsckjdcbkwcfhwef"
             android:padding="8dp"
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+            android:layout_width="match_parent" android:layout_height="60dp"/>
 
 </LinearLayout>
