--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -8,10 +8,9 @@
         android:background="@android:color/holo_red_dark"
         tools:context=".MainActivity">
 
-    <ua.palamarenko.cozyandroid2.CozyRecyclerView
-        android:id="@+id/recycler"
+    <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/photoView"
             android:layout_width="match_parent"
-            app:Sliding="true"
             android:layout_height="match_parent"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
