--- a/app/src/main/res/layout/cell_test.xml
+++ b/app/src/main/res/layout/cell_test.xml
@@ -4,6 +4,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+    <ImageView
+            android:id="@+id/ivIcon"
+            android:background="@android:color/black"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
+
+
     <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
