--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,13 @@
         android:background="@android:color/holo_red_dark"
         tools:context=".MainActivity">
 
-    <com.github.chrisbanes.photoview.PhotoView
-            android:id="@+id/photoView"
+    <Button
+            android:id="@+id/btButton"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
+
+    <ua.palamarenko.cozyandroid2.CozyRecyclerView
+            android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
