--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,20 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/back"
-        android:background="@android:color/holo_red_dark"
         tools:context=".MainActivity">
 
     <Button
             android:id="@+id/btButton"
             android:layout_width="100dp"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp" />
 
     <ua.palamarenko.cozyandroid2.CozyRecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
+    <ImageView
+            android:id="@+id/ivTest"
+            android:visibility="gone"
+            android:layout_width="200dp"
+            android:layout_height="200dp" />
+
+
+    <TextView
+            android:id="@+id/tvClick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
 
 </LinearLayout>
