--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="200dp" />
 
 
-    <TextView
+    <EditText
             android:id="@+id/tvClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
