remove app module

--- a/cozyandroid2/src/main/res/layout/view_item_nav_bar.xml
+++ b/cozyandroid2/src/main/res/layout/view_item_nav_bar.xml
@@ -17,6 +17,7 @@
     <ImageView
             android:id="@+id/ivIcon"
             android:layout_width="28dp"
+            android:layout_marginTop="4dp"
             android:layout_gravity="center"
             android:layout_height="28dp"
          />
