--- a/cozyandroid2/src/main/res/layout/popup_bottom_sheet.xml
+++ b/cozyandroid2/src/main/res/layout/popup_bottom_sheet.xml
@@ -12,7 +12,7 @@
             android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@android:color/transparent"
             app:behavior_hideable="true"
             app:layout_behavior="@string/bottom_sheet_behavior">
 
