--- a/cozyandroid2/src/main/res/values/attrs.xml
+++ b/cozyandroid2/src/main/res/values/attrs.xml
@@ -6,4 +6,36 @@
     </declare-styleable>
 
 
+    <declare-styleable name="ShapeImageView">
+        <attr name="back_shape" format="enum">
+            <enum name="Circle" value="0"/>
+            <enum name="Rectangle" value="1"/>
+            <enum name="RoundRect" value="2"/>
+            <enum name="Triangle" value="3"/>
+        </attr>
+        <attr name="corners_radius" format="dimension"/>
+        <attr name="back_shape_color" format="color" />
+        <attr name="back_shape_border" format="boolean"/>
+        <attr name="back_shape_border_width" format="dimension" />
+        <attr name="gradient_start_color" format="color"/>
+        <attr name="gradient_end_color" format="color"/>
+        <attr name="gradient_direction" format="enum">
+            <enum name="horizontal" value="0"/>
+            <enum name="vertical" value="1"/>
+        </attr>
+    </declare-styleable>
+
+
+    <declare-styleable name="ShapeTextView">
+        <attr name="back_shape"/>
+        <attr name="corners_radius"/>
+        <attr name="back_shape_color"/>
+        <attr name="back_shape_border"/>
+        <attr name="back_shape_border_width"/>
+        <attr name="gradient_start_color"/>
+        <attr name="gradient_end_color"/>
+        <attr name="gradient_direction" />
+    </declare-styleable>
+
+
 </resources>
