--- a/cozyandroid2/src/main/res/layout/view_cozy_recycler.xml
+++ b/cozyandroid2/src/main/res/layout/view_cozy_recycler.xml
@@ -33,6 +33,11 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <FrameLayout
+        android:id="@+id/flError"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 
 
